src/main/resources/io/tackle/operator/deployers/templates/postgresql-service.yaml
#
# Copyright © 2021 the Konveyor Contributors (https://konveyor.io/)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

kind: Service
apiVersion: v1
metadata:
  name: ""
  labels:
    app.kubernetes.io/name: ""
    app.kubernetes.io/version: '10.6'
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: ""
    app.kubernetes.io/part-of: tackle
spec:
  ports:
    - name: tcp
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app.kubernetes.io/name: ""
    app.kubernetes.io/version: '10.6'
  type: ClusterIP
  sessionAffinity: None
