src/main/resources/io/tackle/operator/deployers/templates/ui-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ""
  labels:
    app.kubernetes.io/name: ""
    app.kubernetes.io/component: ui
    app.kubernetes.io/instance: ""
    app.kubernetes.io/part-of: tackle
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: ""
