src/main/resources/io/tackle/operator/deployers/templates/ui-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  labels:
    app.kubernetes.io/name: ""
    app.kubernetes.io/component: application
    app.kubernetes.io/instance: ""
    app.kubernetes.io/part-of: tackle
spec:
  tls:
    - {}
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ""
                port:
                  number: 8080
